[FIX] Fixed a bug that made the button text from the button to exit the extended mode to overflow the component

--- a/src/screens/classification/ClassificationDrawMode/ClassificationDrawModeLayout.css
+++ b/src/screens/classification/ClassificationDrawMode/ClassificationDrawModeLayout.css
@@ -21,6 +21,7 @@
 .container .ant-btn {
     width: 60%;
     height: 3rem;
+    min-width: fit-content;
     font-size: 1.1rem;
 }
 
